<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="87dp"
            android:layout_height="82dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detailA_nom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detailA_nom"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/detailA_prenom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detailA_prenom"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detailA_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detailA_age"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/detailA_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detailA_tel"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.14"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/detailA_url_portfolio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/portfolio" />

                <ImageButton
                    android:id="@+id/detailA_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_dialog_email" />

                <ImageButton
                    android:id="@+id/detailA_url_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/facebook" />

                <ImageButton
                    android:id="@+id/detailA_url_linkedin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/linkedin" />

                <ImageButton
                    android:id="@+id/detailA_url_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/twitter" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/detailA_titre_skills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detailA_titre_skills"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/detailA_liste_skills"
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <TextView
        android:id="@+id/detailA_title_projet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detailA_titre_projet"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/detailA_liste_projet"
        android:layout_width="match_parent"
        android:layout_height="63dp" />

    <TextView
        android:id="@+id/detailA_titre_formation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detailA_titre_formation"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/detailA_liste_formation"
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <TextView
        android:id="@+id/detailA_titre_infos_persos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detailA_titre_infos_persos"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/detailA_infos_persos"
        android:layout_width="match_parent"
        android:layout_height="57dp" />

</LinearLayout>